fixed styling issues for wrapping

--- a/solutions/LinksAndHandlebarsTemplate/src/webparts/featuredContentWebPart/components/layouts/horizontalTitleDescription/Styles.module.scss
+++ b/solutions/LinksAndHandlebarsTemplate/src/webparts/featuredContentWebPart/components/layouts/horizontalTitleDescription/Styles.module.scss
@@ -35,14 +35,18 @@
             font-size: 14px;
             padding: 5px 10px;
             background: #fff;
-            overflow: hidden;
             color: #333;
             font-weight: 600;
             width: 100%;
             position: relative;
-            top: 0px;
-            height: auto!important;
+            top: 0;
             box-sizing: border-box;
+            max-height: 47px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
         }
         & .featured-content-desc {
             position: relative;
